[package]
name = "json_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptree = "0.4.0"
slotmap = "1.0.7"
smol_str = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5.1" }
json = "0.12.4"
serde_json = "1.0.116"
parse_0 = { package = "json_parse", git = "https://github.com/Bobxcat/json_parse.git", rev = "903aed8c46024b9165624faac9f012c36a31a703" }

[[bench]]
harness = false
name = "twitter"
