[package]
name = "json_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
nohash = "0.2.0"
ptree = "0.4.0"
slotmap = "1.0.7"
ustr = "1.0.0"

[dev-dependencies]
criterion = { version = "0.5.1" }
json = "0.12.4"
serde_json = "1.0.116"
parse_0 = { package = "json_parse", git = "https://github.com/Bobxcat/json_parse.git", rev = "903aed8c46024b9165624faac9f012c36a31a703" }
parse_1 = { package = "json_parse", git = "https://github.com/Bobxcat/json_parse.git", rev = "33b7caa349e884a604bd85ef7bf9acffc9705326" }
parse_2 = { package = "json_parse", git = "https://github.com/Bobxcat/json_parse.git", rev = "f1cd7181c2fdf03910bc623661a44bbc9b943895" }

[[bench]]
harness = false
name = "twitter"

[profile.release]
debug = true
